--- a/Desarrollo/src/train_models/train.ipynb
+++ b/Desarrollo/src/train_models/train.ipynb
@@ -885,7 +885,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "vision",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -899,7 +899,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
